--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@
 # There are some restrictions on what makes a valid project name
 # specification here:
 # https://packaging.python.org/specifications/core-metadata/#name
-name = "ubnt-automata"  # Required
+name = "ubnt_automata"  # Required
 
 # Versions should comply with PEP 440:
 # https://www.python.org/dev/peps/pep-0440/
@@ -130,11 +130,11 @@ test = ["coverage"]
 # maintainers, and where to support the project financially. The key is
 # what's used to render the link text on PyPI.
 [project.urls]  # Optional
-"Homepage" = "https://github.com/dmcken/ubnt-automata"
-"Bug Reports" = "https://github.com/dmcken/ubnt-automata/issues"
+"Homepage" = "https://github.com/dmcken/ubnt_automata"
+"Bug Reports" = "https://github.com/dmcken/ubnt_automata/issues"
 # "Funding" = "https://donate.pypi.org"
 # "Say Thanks!" = "http://saythanks.io/to/example"
-"Source" = "https://github.com/dmcken/ubnt-automata"
+"Source" = "https://github.com/dmcken/ubnt_automata"
 
 # The following would provide a command line executable called `sample`
 # which executes the function `main` from this package when invoked.
